--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -32,29 +32,38 @@ jobs:
       - run: git config --system credential.helper store
       - run: echo "https://banned-historical-archives:${{ secrets.GH_PAT }}@github.com" > ~/.git-credentials
       - run: git clone --depth 1 https://github.com/banned-historical-archives/banned-historical-archives.github.io.git
-      - run: cd banned-historical-archives.github.io
-      - run: git submodule init public/archives2 && git submodule update
+      - run: cd banned-historical-archives.github.io && git submodule init public/archives2 && git submodule update
       - uses: actions/setup-node@v3.4.1
         with:
           node-version: 16
-      - run: npm i
-      - run: chown -R ci:ci ./
+      - name: node init
+        working-directory: ./banned-historical-archives.github.io
+        run: |
+          npm i
+          chown -R ci:ci ./
       - id: get_archive_id
+        working-directory: ./banned-historical-archives.github.io
         run: echo ::set-output name=archive_id::$(npx ts-node --project ./tsconfig.build.json backend/ocr-gitworkflow-get-archive-id.ts)
         env:
           BODY: ${{ github.event.issue.body }}
           TITLE: ${{ github.event.issue.title }}
-      - run: git submodule init public/archives${{ steps.get_archive_id.outputs.archive_id }} && git submodule update
+      - name: init subm
+        working-directory: ./banned-historical-archives.github.io
+        run: git submodule init public/archives${{ steps.get_archive_id.outputs.archive_id }} && git submodule update
       - id: action_with_json_output
+        working-directory: ./banned-historical-archives.github.io
         run: echo ::set-output name=data::$(npx ts-node --project ./tsconfig.build.json backend/ocr-gitworkflow.ts)
         env:
           BODY: ${{ github.event.issue.body }}
           TITLE: ${{ github.event.issue.title }}
-      - run: npx npm run prettier
+      - name: prettier
+        working-directory: ./banned-historical-archives.github.io
+        run: npx npm run prettier
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v4
         with:
+          path: ./banned-historical-archives.github.io
           body: 'fix #${{ github.event.issue.number }}'
           committer: GitHub <noreply@github.com>
           author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
@@ -67,6 +76,7 @@ jobs:
             automated pr
           draft: false
       - name: Create Pull Request For Submodule
+        working-directory: ./banned-historical-archives.github.io
         env:
           GH_TOKEN: ${{ secrets.GH_PAT}}
         run: |
