--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -33,6 +33,7 @@ jobs:
         run: |
           git config --system credential.helper store
           echo "https://banned-historical-archives:${{ secrets.GH_PAT }}@github.com" > ~/.git-credentials
+          git config --global submodule.token ${{ secrets.GH_PAT }}
           git clone --depth 1 https://github.com/banned-historical-archives/banned-historical-archives.github.io.git
           cd banned-historical-archives.github.io && git submodule init public/archives2 && git submodule update
       - uses: actions/setup-node@v3.4.1
