--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -35,7 +35,7 @@ jobs:
           echo "https://banned-historical-archives:${{ secrets.GH_PAT }}@github.com" > ~/.git-credentials
           git config --global submodule.token ${{ secrets.GH_PAT }}
           git clone --depth 1 https://github.com/banned-historical-archives/banned-historical-archives.github.io.git
-          cd banned-historical-archives.github.io && git submodule init public/archives2 && git submodule update
+          cd banned-historical-archives.github.io && git submodule sync && git submodule update --init public/archives2
       - uses: actions/setup-node@v3.4.1
         with:
           node-version: 16
