--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -42,7 +42,6 @@ jobs:
         working-directory: ./banned-historical-archives.github.io
         run: |
           npm i
-          chown -R ci:ci ./
       - id: get_archive_id
         working-directory: ./banned-historical-archives.github.io
         run: echo ::set-output name=archive_id::$(npx ts-node --project ./tsconfig.build.json backend/ocr-gitworkflow-get-archive-id.ts)
@@ -53,7 +52,8 @@ jobs:
         working-directory: ./banned-historical-archives.github.io
         run: |
           rm -rf public/archives${{ steps.get_archive_id.outputs.archive_id }}
-          git clone --depth 1 https://github.com/banned-historical-archives/banned-historical-archives${{ steps.get_archive_id.outputs.archive_id }} public/archives${{ steps.get_archive_id.outputs.archive_id }}
+          git clone https://github.com/banned-historical-archives/banned-historical-archives${{ steps.get_archive_id.outputs.archive_id }} public/archives${{ steps.get_archive_id.outputs.archive_id }}
+          chown -R ci:ci ./
       - id: action_with_json_output
         working-directory: ./banned-historical-archives.github.io
         run: echo ::set-output name=data::$(npx ts-node --project ./tsconfig.build.json backend/ocr-gitworkflow.ts)
