--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -32,6 +32,8 @@ jobs:
       - name: clone
         run: |
           git config --system credential.helper store
+          git config --global user.name github-actions
+          git config --global user.email github-actions@github.com
           echo "https://banned-historical-archives:${{ secrets.GH_PAT }}@github.com" > ~/.git-credentials
           git config --global submodule.token ${{ secrets.GH_PAT }}
           git clone --depth 1 https://github.com/banned-historical-archives/banned-historical-archives.github.io.git
@@ -64,39 +66,36 @@ jobs:
         working-directory: ./banned-historical-archives.github.io
         run: npx npm run prettier
       - name: Create Pull Request
-        id: cpr
-        uses: peter-evans/create-pull-request@v4
-        with:
-          path: ./banned-historical-archives.github.io
-          body: 'fix #${{ github.event.issue.number }}'
-          committer: GitHub <noreply@github.com>
-          author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
-          signoff: false
-          branch-suffix: random
-          delete-branch: true
-          title: '${{ github.event.issue.title }}'
-          labels: |
-            report
-            automated pr
-          draft: false
+        working-directory: ./banned-historical-archives.github.io
+        run: |
+          git checkout -b feat/${{ steps.generate-uuid.outputs.uuid }}
+          git add ./
+          git commit -m 'feat: ${{ github.event.issue.title }}'
+          git push origin feat/${{ steps.generate-uuid.outputs.uuid }}
+          curl -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.GH_PAT }}" \
+          -d '{
+            "title": "${{ github.event.issue.title }}",
+            "body": "fix #${{ github.event.issue.number }}",
+            "head": "feat/${{ steps.generate-uuid.outputs.uuid }}",
+            "base": "master"
+          }' \
+          https://api.github.com/repos/banned-historical-archives/banned-historical-archives.github.io/pulls
       - name: Create Pull Request For Submodule
         working-directory: ./banned-historical-archives.github.io
-        env:
-          GH_TOKEN: ${{ secrets.GH_PAT}}
         run: |
           cd public/archives${{ steps.get_archive_id.outputs.archive_id }}
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git checkout -b feat-${{ steps.generate-uuid.outputs.uuid }}
+          git checkout -b feat/${{ steps.generate-uuid.outputs.uuid }}
           git add .
           git commit -m 'feat: ${{ github.event.issue.title }}'
-          git push origin feat-${{ steps.generate-uuid.outputs.uuid }}
+          git push origin feat/${{ steps.generate-uuid.outputs.uuid }}
           curl \
           -X POST \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer $GH_TOKEN" \
+          -H "Authorization: Bearer ${{ secrets.GH_PAT }}" \
           https://api.github.com/repos/banned-historical-archives/banned-historical-archives${{ steps.get_archive_id.outputs.archive_id }}/pulls \
-          -d '{"title":"${{ github.event.issue.title }}","body":"https://github.com/banned-historical-archives/banned-historical-archives.github.io/issues/${{github.event.issue.number}}","head":"feat-${{ steps.generate-uuid.outputs.uuid }}","base":"main"}'
+          -d '{"title":"${{ github.event.issue.title }}","body":"https://github.com/banned-historical-archives/banned-historical-archives.github.io/issues/${{github.event.issue.number}}","head":"feat/${{ steps.generate-uuid.outputs.uuid }}","base":"main"}'
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v2
         with:
