--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -28,7 +28,7 @@ jobs:
       - run: apt install git -y
       - run: pip install pymupdf
       - run: useradd -u 1001 ci   
-      - run: git config --global --add safe.directory /__w/banned-historical-archives.github.io/banned-historical-archives.github.io/banned-historical-archives.github.io
+      - run: git config --global --add safe.directory "*"
       - name: clone
         run: |
           git config --system credential.helper store
