--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "init-db": "ts-node --project ./tsconfig.build.json ./backend/init-db.ts",
     "init-es": "ts-node --project ./tsconfig.build.json ./backend/init-es.ts",
     "hack-mui": "sed -i'' -e 's/return React/return LicenseStatus.Valid;return React/g' node_modules/@mui/x-license-pro/useLicenseVerifier/useLicenseVerifier.js",
-    "build": "npm run hack-mui && next build && next export && rm -rf out/archives*",
+    "build": "npm run hack-mui && next build && rm -rf public/archives* && next export && rm -rf out/archives*",
     "build-txt": "ts-node --project ./tsconfig.build.json ./backend/build-txt.ts",
     "build-readme": "ts-node --project ./tsconfig.build.json ./backend/build-readme.ts",
     "cp-pdfjs": "cp -r ./node_modules/pdfjs-dist ./public/",
