--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "public/archives10"]
 	path = public/archives10
 	url = git@github.com:banned-historical-archives/banned-historical-archives10.git
+[submodule "public/archives11"]
+	path = public/archives11
+	url = git@github.com:banned-historical-archives/banned-historical-archives11.git
