--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -39,6 +39,8 @@ jobs:
           git clone --depth 1 https://github.com/banned-historical-archives/banned-historical-archives.github.io.git
       - name: Use Node.js
         uses: actions/setup-node@v3
+        with:
+          node-version: 18
       - name: node init
         working-directory: ./banned-historical-archives.github.io
         run: |
