--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,5 +19,7 @@ jobs:
       - run: cd public && rm -rf archives9 && git clone --depth=1 https://github.com/banned-historical-archives/banned-historical-archives9.git archives9
       - name: Use Node.js
         uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - run: npm install
       - run: npm run test
