--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "public/archives11"]
 	path = public/archives11
 	url = git@github.com:banned-historical-archives/banned-historical-archives11.git
+[submodule "public/archives12"]
+	path = public/archives12
+	url = git@github.com:banned-historical-archives/banned-historical-archives12.git
