--- a/.github/workflows/media.yml
+++ b/.github/workflows/media.yml
@@ -50,7 +50,7 @@ jobs:
           git config --global user.email github-actions@github.com
           git checkout -b feat-${{ steps.generate-uuid.outputs.uuid }}
           git add .
-          git commit -m 'feat: ${{ github.event.issue.title }}'
+          git commit -m 'feat: automation}'
           git push origin feat-${{ steps.generate-uuid.outputs.uuid }}
           curl \
           -X POST \
