--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -71,13 +71,13 @@ jobs:
         run: |
           git checkout -b feat/${{ steps.generate-uuid.outputs.uuid }}
           git add ./
-          git commit -m 'feat: ${{ github.event.issue.title }}'
+          git commit -m 'feat: $TITLE'
           git push origin feat/${{ steps.generate-uuid.outputs.uuid }}
           curl -X POST \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.GH_PAT }}" \
           -d '{
-            "title": "${{ github.event.issue.title }}",
+            "title": "$TITLE",
             "body": "fix #${{ github.event.issue.number }}",
             "head": "feat/${{ steps.generate-uuid.outputs.uuid }}",
             "base": "master"
@@ -89,14 +89,14 @@ jobs:
           cd public/archives${{ steps.get_archive_id.outputs.archive_id }}
           git checkout -b feat/${{ steps.generate-uuid.outputs.uuid }}
           git add .
-          git commit -m 'feat: ocr'
+          git commit -m 'feat: $TITLE'
           git push origin feat/${{ steps.generate-uuid.outputs.uuid }}
           curl \
           -X POST \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.GH_PAT }}" \
           https://api.github.com/repos/banned-historical-archives/banned-historical-archives${{ steps.get_archive_id.outputs.archive_id }}/pulls \
-          -d '{"title":"${{ github.event.issue.title }}","body":"https://github.com/banned-historical-archives/banned-historical-archives.github.io/issues/${{github.event.issue.number}}","head":"feat/${{ steps.generate-uuid.outputs.uuid }}","base":"main"}'
+          -d '{"title":"$TITLE","body":"https://github.com/banned-historical-archives/banned-historical-archives.github.io/issues/${{github.event.issue.number}}","head":"feat/${{ steps.generate-uuid.outputs.uuid }}","base":"main"}'
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v2
         with:
