--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "public/archives12"]
 	path = public/archives12
 	url = git@github.com:banned-historical-archives/banned-historical-archives12.git
+[submodule "public/archives14"]
+	path = public/archives14
+	url = git@github.com:banned-historical-archives/banned-historical-archives14.git
