--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -70,7 +70,7 @@ jobs:
         working-directory: ./banned-historical-archives.github.io
         run: |
           git checkout -b feat/${{ steps.generate-uuid.outputs.uuid }}
-          git add ./
+          git add ./backend
           git commit -m "feat: 自动化文稿录入"
           git push origin feat/${{ steps.generate-uuid.outputs.uuid }}
           curl -X POST \
