--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "incremental": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "migration/PPOCRV3toV4.js"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "backend/parser/pdf.js", "backend/parser/pdf.worker.js"]
 }
