--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "x",
   "version": "0.1.0",
   "scripts": {
+    "dev:nextjs-helper": "ts-node --project ./tsconfig.build.json ./backend/nextjs-helper",
+    "build-catelog": "ts-node --project ./tsconfig.build.json ./backend/build-catelog.ts",
     "dev": "COMMIT_HASH=$(git rev-parse HEAD) next dev",
-    "dev:ocr-server": "ts-node --project ./tsconfig.build.json ./backend/ocr-server.ts",
     "dev:es-server": "ts-node --project ./tsconfig.build.json ./backend/es-server.ts",
     "init-db": "ts-node --project ./tsconfig.build.json ./backend/init-db.ts",
     "init-es": "ts-node --project ./tsconfig.build.json ./backend/init-es.ts",
@@ -34,7 +35,7 @@
     "@types/express": "^4.17.13",
     "axios": "^0.27.2",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
-    "body-parser": "^1.20.0",
+    "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
@@ -52,14 +53,14 @@
     "json5": "^2.2.2",
     "memo_file": "^1.1.0",
     "mysql2": "^2.3.3",
-    "next": "^13.1.6",
+    "next": "^14.0.4",
     "next-sitemap": "^3.1.13",
     "node-fetch": "^2.6.7",
     "pdf.js": "^0.1.0",
     "pdfjs-dist": "2.12",
     "raw-loader": "^4.0.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
     "react-pdf": "^5.7.2",
     "remark-gfm": "^3.0.1",
