--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
     "build-catelog": "ts-node --project ./tsconfig.build.json ./backend/build-catelog.ts",
     "dev": "COMMIT_HASH=$(git rev-parse HEAD) next dev",
     "dev:es-server": "ts-node --project ./tsconfig.build.json ./backend/es-server.ts",
-    "init-db": "ts-node --project ./tsconfig.build.json ./backend/init-db.ts",
     "init-es": "ts-node --project ./tsconfig.build.json ./backend/init-es.ts",
     "hack-mui": "sed -i'' -e 's/return React/return LicenseStatus.Valid;return React/g' node_modules/@mui/x-license-pro/useLicenseVerifier/useLicenseVerifier.js",
-    "build": "npm run hack-mui && next build && rm -rf public/archives* && next export && rm -rf out/archives*",
+    "build": "npm run hack-mui && next build && next export",
     "build-txt": "ts-node --project ./tsconfig.build.json ./backend/build-txt.ts",
     "build-readme": "ts-node --project ./tsconfig.build.json ./backend/build-readme.ts",
     "cp-pdfjs": "cp -r ./node_modules/pdfjs-dist ./public/",
-    "fidelity-check": "rm -rf backend/ocr_cache/* && npm run init-db && output='git status --porcelain | head -1';if $output; then exit 1; else exit 0; fi && echo ok",
     "postbuild": "next-sitemap",
     "test": "vitest",
     "start": "next start",
