--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,13 +17,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          submodule: true
+          submodules: true
       - name: Use Node.js
         uses: actions/setup-node@v3
       - run: npm install
       - run: cp -r ./node_modules/pdfjs-dist ./public/
       - run: node_options="--max-old-space-size=8192" npm run build-catelog
-      - run: node_options="--max-old-space-size=8192" npm run build
+      - run: node_options="--max-old-space-size=8192" npm run dev:nextjs-helper && npm run build
       - run: git config --global http.postBuffer 2097152000
       - run: git config --global user.email "you@example.com"
       - run: git config --global user.name "Your Name"
