--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,9 +39,9 @@ jobs:
       - run: git config --global user.name "Your Name"
       - run: git checkout --orphan x
       - run: git reset --hard
-      - run: mv out/* ./
+      - run: find . -maxdepth 1 ! -name 'out' -exec rm -rf {} +
+      - run: mv out/* ./ && rmdir out
       - run: touch .nojekyll
-      - run: rm -rf node_modules && rm -rf .next
       - run: git add .
       - run: git commit -m update
       - run: git push origin x:gh-pages -f
